--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "surge": "^0.22.1",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
